k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: systemregister
spec:
  selector:
    app: systemregister
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
